More unit testing infrastructure; AdLoader tests